Source/Alternet.UI.Pal/Api/Toolbar.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2024 AlterNET Software.</auto-generated>

#pragma once

#include "Toolbar.h"
#include "ToolbarItem.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API Toolbar* Toolbar_Create_()
{
    return new Toolbar();
}

ALTERNET_UI_API int Toolbar_GetItemsCount_(Toolbar* obj)
{
    return obj->GetItemsCount();
}

ALTERNET_UI_API c_bool Toolbar_GetItemTextVisible_(Toolbar* obj)
{
    return obj->GetItemTextVisible();
}

ALTERNET_UI_API void Toolbar_SetItemTextVisible_(Toolbar* obj, c_bool value)
{
    obj->SetItemTextVisible(value);
}

ALTERNET_UI_API c_bool Toolbar_GetItemImagesVisible_(Toolbar* obj)
{
    return obj->GetItemImagesVisible();
}

ALTERNET_UI_API void Toolbar_SetItemImagesVisible_(Toolbar* obj, c_bool value)
{
    obj->SetItemImagesVisible(value);
}

ALTERNET_UI_API c_bool Toolbar_GetNoDivider_(Toolbar* obj)
{
    return obj->GetNoDivider();
}

ALTERNET_UI_API void Toolbar_SetNoDivider_(Toolbar* obj, c_bool value)
{
    obj->SetNoDivider(value);
}

ALTERNET_UI_API c_bool Toolbar_GetIsVertical_(Toolbar* obj)
{
    return obj->GetIsVertical();
}

ALTERNET_UI_API void Toolbar_SetIsVertical_(Toolbar* obj, c_bool value)
{
    obj->SetIsVertical(value);
}

ALTERNET_UI_API c_bool Toolbar_GetIsBottom_(Toolbar* obj)
{
    return obj->GetIsBottom();
}

ALTERNET_UI_API void Toolbar_SetIsBottom_(Toolbar* obj, c_bool value)
{
    obj->SetIsBottom(value);
}

ALTERNET_UI_API c_bool Toolbar_GetIsRight_(Toolbar* obj)
{
    return obj->GetIsRight();
}

ALTERNET_UI_API void Toolbar_SetIsRight_(Toolbar* obj, c_bool value)
{
    obj->SetIsRight(value);
}

ALTERNET_UI_API ToolbarItemImageToTextDisplayMode Toolbar_GetImageToTextDisplayMode_(Toolbar* obj)
{
    return obj->GetImageToTextDisplayMode();
}

ALTERNET_UI_API void Toolbar_SetImageToTextDisplayMode_(Toolbar* obj, ToolbarItemImageToTextDisplayMode value)
{
    obj->SetImageToTextDisplayMode(value);
}

ALTERNET_UI_API void* Toolbar_CreateEx_(c_bool mainToolbar)
{
    return Toolbar::CreateEx(mainToolbar);
}

ALTERNET_UI_API void Toolbar_InsertItemAt_(Toolbar* obj, int index, ToolbarItem* item)
{
    obj->InsertItemAt(index, item);
}

ALTERNET_UI_API void Toolbar_RemoveItemAt_(Toolbar* obj, int index)
{
    obj->RemoveItemAt(index);
}

ALTERNET_UI_API void Toolbar_Realize_(Toolbar* obj)
{
    obj->Realize();
}